@@ -9,6 +9,7 @@ hildon-application-manager (1:2.2.23~unreleased) unstable; urgency=low
   * Pannables, HildonCheckButton in settings dialog
   * Get rid of the toolbars
   * Menu updates, including tap-and-hold for "Details"
+  * Update package list widget
 
  -- Marius Vollmer <marius.vollmer@nokia.com>  Fri, 04 Jun 2009 21:52:00 +0100	
 
